--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -13,12 +13,26 @@ body {
 }
 
 header {
-    height: 100px;
+    height: 110px;
     position: relative;
 }
 
 header .menu-utility {
     float: right;
+}
+
+.top {
+    background: #d0dae0;
+    height: 30px;
+}
+
+.user-info {
+    float: right;
+    padding: 5px;
+}
+
+.user-info a {
+    margin-left: 10px;
 }
 
 .container {
@@ -39,8 +53,9 @@ header .menu-utility {
     left: 75%;
 }
 
-.authorization {
-    float: right;
+.header-menu {
+    margin: 50px 0 0 50px;
+    font-size: 16px;
 }
 
 .field {
@@ -63,7 +78,6 @@ header .menu-utility {
 
 .menu {
     width: 100%;
-    height: 50px;
 }
 
 .searching-form {
@@ -82,8 +96,12 @@ header .menu-utility {
     padding: 15px 20px 0 0;
 }
 
-.main-block {
+.main {
     margin-top: 50px;
+}
+
+.main-content {
+    min-height: 300px;
 }
 
 .main-text {
@@ -141,12 +159,6 @@ header .menu-utility {
     text-align: center;
 }
 
-.header-menu {
-    height: 30px;
-    margin: 50px 0 0 80px;
-    font-size: 16px;
-}
-
 #navigation #menu {
     position: relative;
 }
@@ -189,10 +201,6 @@ footer ul {
 
 .footer-info {
     height: 180px;
-}
-
-.social-media {
-
 }
 
 ul {
