--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    height: 110px;
+    height: 115px;
     position: relative;
 }
 
@@ -81,8 +81,8 @@ header .menu-utility {
 }
 
 .searching-form {
-    max-width: 270px;
-    height: 200px;
+    max-width: 320px;
+    min-height: 220px;
     border-width: 1px;
     border-color: rgb(190,190,190);
     border-style: solid;
@@ -92,8 +92,13 @@ header .menu-utility {
     margin: -20px 30px;
 }
 
-.searching-form .form-button {
-    padding: 15px 20px 0 0;
+.searching-form input, .searching-form button {
+    min-width: 105px;
+    min-height: 30px;
+}
+
+.searching-form input {
+    box-sizing: border-box;
 }
 
 .main {
@@ -156,6 +161,22 @@ header .menu-utility {
 
 .login-form input, .registration-form input {
     box-sizing: border-box;
+    width: 300px;
+    height: 35px;
+    margin: 10px;
+}
+
+button {
+    text-transform: uppercase;
+    font-size: 1em;
+    border-radius: 3px;
+    border-color: #2e94d8;
+    background-color: #3498db;
+    color: white;
+    font-weight: 600;
+}
+
+.login-form button, .registration-form button {
     width: 300px;
     height: 35px;
     margin: 10px;
@@ -230,4 +251,17 @@ li {
 .error-message {
     text-align: center;
     color: red;
+}
+
+#localization {
+    display: inline-flex;
+}
+
+#localization form {
+    padding-left: 5px;
+}
+
+#searching-form-title {
+    font-size: 16px;
+    font-weight: 600;
 }
