--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -360,3 +360,9 @@ li {
     height: 30px;
     margin-top: 10px;
 }
+
+.code404 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 590px;
+}
