--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+    min-width: 1080px;
     font-size: 14px;
     background-color: #fff;
     color: #36495a;
@@ -171,6 +172,7 @@ header .menu-utility {
     width: 300px;
     height: 35px;
     margin: 10px;
+    padding: 0 10px;
 }
 
 .registration-form h3, .registration-form p {
