--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -264,6 +264,18 @@ li {
     width: 590px;
 }
 
+.message {
+    margin: 20px 10px;
+    font-size: 16px;
+    font-style: italic;
+}
+
+.data-error {
+    margin: 20px 10px;
+    font-size: 16px;
+    color: red;
+}
+
 .error-message {
     text-align: center;
     color: red;
