--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -86,9 +86,24 @@ header .menu-utility {
     width: 100%;
 }
 
+#main-search input {
+    border-radius: 2px;
+    border: 1px solid #979797;
+    width: 100%;
+    height: 35px;
+    padding: 8px;
+    font: 16px Roboto, sans-serif;
+}
+
+#main-search button {
+    width: 100%;
+    height: 35px;
+    margin-top: 10px;
+}
+
 .searching-form {
-    max-width: 330px;
-    min-height: 220px;
+    width: 230px;
+    height: 230px;
     border: 1px solid rgb(190,190,190);
     padding: 5px;
     background-color: white;
@@ -190,6 +205,10 @@ button {
     background-color: #3498db;
     color: white;
     font-weight: 600;
+}
+
+button:hover {
+    background-color: #5db2ea;
 }
 
 .login-form button, .registration-form button {
@@ -321,7 +340,7 @@ li {
     background-color: #ff000b36;
 }
 
-.selected-user-tab {
+.selected-tab {
     border-bottom: 3px solid #7dbf26;
 }
 
@@ -461,11 +480,106 @@ tr:hover {
     margin: 5px 30px 5px 0;
 }
 
-#admin-table-header {
-    vertical-align: top;
+.new-order {
+    background-color: #9de044;
+    border-color: white;
+}
+
+.expired-order {
+    background-color: lightcoral;
+    border-color: white;
+}
+
+.small-car-img {
+    width: 122px;
+}
+
+#main-car-image {
+    width: 498px;
+}
+
+#car-information {
+    width: 400px;
+}
+
+#car-information h1 {
+    margin-top: 0;
     text-align: center;
 }
 
-#admin-all-orders td:first-child {
+#car-images {
+    width: 500px;
+    margin: 0 70px 30px 0;
+}
+
+#car-details {
+    margin: 40px 0 40px 0;
+}
+
+#car-price {
+    font-size: 30px;
     text-align: center;
+}
+
+.car-info {
+    margin: 30px 0;
+}
+
+.car-features {
+    padding-left: 0;
+    list-style: none;
+}
+
+.car-features li {
+    font-family: "Trebuchet MS", "Lucida Sans";
+    padding: 7px 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
+    -2px -2px 5px 0 rgba(0,0,0,.1),
+    2px 2px 5px 0 rgba(0,0,0,.1),
+    -2px 2px 5px 0 rgba(0,0,0,.1);
+    font-size: 20px;
+    border-left: 10px solid;
+}
+
+.car-features li:nth-child(1){border-color: #8bc63e;}
+.car-features li:nth-child(2){border-color: #fcba30;}
+.car-features li:nth-child(3){border-color: #1ccfc9;}
+.car-features li:nth-child(4){border-color: #493224;}
+.car-features li:nth-child(5){border-color: #f05d22;}
+.car-features li:nth-child(6){border-color: #8bc63e;}
+
+#order-form {
+    border-radius: 5px;
+    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1), -2px -2px 5px 0 rgba(0,0,0,.1), 2px 2px 5px 0 rgba(0,0,0,.1), -2px 2px 5px 0 rgba(0,0,0,.1);
+    border-left: 10px solid;
+    border-color: #8a2be254;
+    width: 350px;
+    padding: 20px;
+}
+
+#order-form p {
+    margin: 0;
+}
+
+#order-form div:first-child {
+    margin-right: 20px;
+    margin-left: 10px;
+}
+
+#order-form input {
+    height: 25px;
+    border-radius: 2px;
+    border: 1px solid #979797;
+    padding: 5px;
+    width: 143px
+}
+
+#order-form button {
+    width: 330px;
+    height: 40px;
+    margin-top: 10px;
+    font-size: 20px;
+    margin-left: 10px;
 }
