--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -24,6 +24,10 @@ a:hover {
     text-decoration: underline;
 }
 
+a:focus {
+    outline: none;
+}
+
 ul {
     list-style-type: none;
 }
@@ -63,6 +67,7 @@ button:focus {
 
 input,
 select {
+    box-sizing: border-box;
     transition: all .3s;
     border-radius: 2px;
     border: 1px solid #979797;
@@ -70,7 +75,19 @@ select {
 
 input:hover,
 select:hover {
+    outline: none;
     box-shadow: #3498db38 0px 2px 6px 0px;
+}
+
+input:active,
+select:active {
+    outline: none;
+}
+
+input[type="date" i] {
+    font-family: inherit;
+    cursor: pointer;
+    padding: 3px!important;
 }
 
 header {
@@ -164,10 +181,6 @@ header .menu-utility {
     min-height: 30px;
 }
 
-.searching-form input {
-    box-sizing: border-box;
-}
-
 .main {
     margin-top: 50px;
 }
@@ -231,7 +244,6 @@ header .menu-utility {
 }
 
 .login-form input, .registration-form input {
-    box-sizing: border-box;
     width: 300px;
     height: 35px;
     margin: 10px;
@@ -481,24 +493,34 @@ tr:hover {
     border: 1px solid #c2dcf3;
     border-radius: 5px;
     margin: 20px 0;
-    padding: 10px 30px;
+    padding: 0 30px;
     background-color: #b1b1b124;
 }
 
 .car-title {
-    border-bottom: 1px solid #ddd;
-    font-size: 18px;
-    font-weight: 600;
-    padding-bottom: 5px;
+    font-size: 25px;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+
+.car:hover .car-title {
+    color: #0100cc;
+    text-decoration: underline;
+}
+
+.car .car-image img {
+    max-width: 200px;
+    max-height: 150px;
 }
 
 .car-image {
-    margin: 20px 0;
+    margin: 20px 0 15px 0;
 }
 
 .car-desc {
     width: 400px;
-    margin: 15px 20px 0 20px;
+    margin: 20px 10px 0 40px;
+    color: rgb(54, 73, 90);
 }
 
 .car-desc p {
@@ -534,7 +556,7 @@ tr:hover {
 }
 
 #car-information {
-    width: 400px;
+    width: 430px;
 }
 
 #car-information h1 {
@@ -544,7 +566,7 @@ tr:hover {
 
 #car-images {
     width: 500px;
-    margin: 0 70px 30px 0;
+    margin-bottom: 30px;
 }
 
 #car-details {
@@ -570,9 +592,9 @@ tr:hover {
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
-    -2px -2px 5px 0 rgba(0,0,0,.1),
-    2px 2px 5px 0 rgba(0,0,0,.1),
-    -2px 2px 5px 0 rgba(0,0,0,.1);
+                -2px -2px 5px 0 rgba(0,0,0,.1),
+                2px 2px 5px 0 rgba(0,0,0,.1),
+                -2px 2px 5px 0 rgba(0,0,0,.1);
     font-size: 20px;
     border-left: 10px solid;
 }
@@ -586,10 +608,12 @@ tr:hover {
 
 #order-form {
     border-radius: 5px;
-    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1), -2px -2px 5px 0 rgba(0,0,0,.1), 2px 2px 5px 0 rgba(0,0,0,.1), -2px 2px 5px 0 rgba(0,0,0,.1);
+    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
+                -2px -2px 5px 0 rgba(0,0,0,.1),
+                2px 2px 5px 0 rgba(0,0,0,.1),
+                -2px 2px 5px 0 rgba(0,0,0,.1);
     border-left: 10px solid;
     border-color: #8a2be254;
-    width: 350px;
     padding: 20px;
 }
 
@@ -597,30 +621,29 @@ tr:hover {
     margin: 0;
 }
 
-#order-form div:first-child {
-    margin-right: 20px;
-    margin-left: 10px;
-}
-
 #order-form input {
     height: 25px;
     padding: 5px;
-    width: 143px
+    width: 170px;
+}
+
+#order-form form {
+    padding: 0 10px;
 }
 
 #order-form button {
-    width: 330px;
+    width: 100%;
     height: 40px;
     margin-top: 10px;
     font-size: 20px;
-    margin-left: 10px;
 }
 
 .quick-order {
     display: flex;
-    margin: 15px 20px 0 20px;
-    width: 210px;
-    height: 200px;
+    padding-left: 30px;
+    margin-top: 20px;
+    margin: 20px 0;
+    border-left: 1px solid #dddddd;
 }
 
 .quick-order form {
@@ -644,7 +667,6 @@ tr:hover {
 
 .quick-order input {
     margin-top: 15px;
-    box-sizing: border-box;
     padding-left: 10px;
 }
 
@@ -676,7 +698,6 @@ tr:hover {
 .user-data-fields select {
     padding: 5px;
     margin-right: 5px;
-    box-sizing: border-box;
     width: 100%;
     float: left;
 }
@@ -750,7 +771,6 @@ tr:hover {
     font-size: 16px;
     border: 1px solid rgba(0,0,0,.2);
     border-radius: 2px;
-    box-sizing: border-box;
 }
 
 #bankcard-number {
@@ -877,31 +897,42 @@ tr:hover {
 }
 
 .admin-tab.selected-tab a {
-    box-shadow: 0px -4px 0 #5a514f inset;
+    box-shadow: 0px -4px 0 #5a514f inset!important;
 }
 
-.selected-tab a {
-    box-shadow:0px -4px 0 #9de044 inset;
+.header-menu.selected-tab a {
+    box-shadow: -3px 1px 5px -1px #00000014,
+    0px -4px 0 #9de044 inset!important;
 }
 
 #main-menu {
-    margin-top: 52px;
+    margin-top: 37px;
+    padding: 15px 0;
+}
+
+#main-menu .header-menu:first-child {
+    margin-right: 0;
 }
 
 .header-menu {
     font-size: 16px;
     text-transform: uppercase;
-    color: #36495a;
+    margin-right: 10px;
     text-decoration: none;
 }
 
 .header-menu a {
     padding: 15px;
+    color: #36495a;
+    box-shadow: -3px 1px 5px -1px #00000014;
+    background: #f1f1f152;
 }
 
 .header-menu a:hover {
-    box-shadow:0px -5px 0 #5b8db9 inset;
+    box-shadow: -3px 1px 5px -1px rgba(0,0,0,.1),
+    0px -5px 0 #5b8db9 inset;
     text-decoration: none;
+    background: rgb(241 241 241);
 }
 
 footer ul {
@@ -1030,4 +1061,121 @@ footer ul {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.car-price span {
+    margin: 0 2px;
+}
+
+.price-content {
+    text-align: center;
+    font-size: 15px;
+    margin: auto;
+    padding-top: 8px;
+}
+
+.car-price .old-price {
+    text-decoration: line-through;
+    color: #879298;
+}
+
+.car-price .new-price {
+    color: #2684c3;
+}
+
+.car-price .price-block {
+    padding: 5px 0;
+}
+
+.price-content .price {
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.car-price .discount {
+    background-color: #1ccfc933;
+}
+
+.quick-order .car-price .old-price {
+    font-size: 16px;
+}
+
+.quick-order .car-price .price {
+    font-size: 24px;
+}
+
+.quick-order .car-price .price-content {
+    font-size: 14px;
+}
+
+.quick-order .car-price .discount {
+    font-size: 12px;
+}
+
+.quick-order .car-price {
+    margin-bottom: -10px;
+}
+
+#car-information .car-price {
+    margin: 20px 0;
+    border-radius: 5px;
+    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
+                -2px -2px 5px 0 rgba(0,0,0,.1),
+                2px 2px 5px 0 rgba(0,0,0,.1),
+                -2px 2px 5px 0 rgba(0,0,0,.1);
+    border-left: 10px solid;
+    border-color: #9de044;
+}
+
+#car-information .car-price .old-price {
+    font-size: 27px;
+}
+
+#car-content {
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgb(221, 221, 221);
+}
+
+#recommended-cars {
+    width: 1010px;
+}
+
+.recommended-car {
+    width: 299px;
+    text-align: center;
+    border: 1px solid #d0dae06b;
+    border-radius: 5px;
+    box-shadow: 1px 2px 5px 0 #5d5d5d1a,
+                0px 6px 0 #5b8db9 inset;
+    margin: 0 30px 30px 0;
+    padding: 0 15px 10px 0;
+    background-color: #cccccc24;
+}
+
+.recommended-car:hover {
+    box-shadow: 1px 2px 9px 0 #316f7961,
+                0px 6px 0 #8bc63e inset;
+    background-color: #cccccc52;
+}
+
+.recommended-car:last-child {
+    margin-right: 0;
+}
+
+.recommended-car a {
+    color: rgb(54, 73, 90);
+}
+
+.recommended-car img {
+    padding-bottom: 5px;
+    width: 250px;
+}
+
+.recommended-car h2 {
+    font-weight: 300;
+}
+
+.recommended-car:hover h2 {
+    color: #0100cc;
+    text-decoration: underline;
 }
