--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -7,11 +7,15 @@ html {
 body {
     min-width: 1080px;
     font-size: 14px;
-    background-color: #fff;
     color: #36495a;
     line-height: inherit;
     position: relative;
     margin: 0;
+    background: #e8ebed;
+}
+
+::placeholder {
+    color: #5d5d5d;
 }
 
 a {
@@ -54,7 +58,7 @@ button:hover {
 
 button:active {
     transition: none;
-    box-shadow: #00000038 0px 2px 4px 0px inset;
+    box-shadow: #00000038 0 2px 4px 0 inset;
 }
 
 button,
@@ -71,12 +75,14 @@ select {
     transition: all .3s;
     border-radius: 2px;
     border: 1px solid #979797;
+    outline: none;
+    padding-left: 10px;
 }
 
 input:hover,
 select:hover {
     outline: none;
-    box-shadow: #3498db38 0px 2px 6px 0px;
+    box-shadow: #3498db38 0 2px 6px 0;
 }
 
 input:active,
@@ -87,12 +93,17 @@ select:active {
 input[type="date" i] {
     font-family: inherit;
     cursor: pointer;
-    padding: 3px!important;
+    padding: 3px 0 3px 10px!important;
 }
 
 header {
-    height: 115px;
+    height: 121px;
     position: relative;
+    background: white;
+}
+
+header .container {
+    max-width: 1090px;
 }
 
 header .menu-utility {
@@ -101,7 +112,17 @@ header .menu-utility {
 
 .top {
     background: #d0dae0;
-    height: 30px;
+    height: 35px;
+    font-size: 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, .12);
+}
+
+.top button {
+    padding: 4px 8px;
+}
+
+.top .header-contacts {
+    margin-top: 4px;
 }
 
 .user-info {
@@ -181,14 +202,10 @@ header .menu-utility {
     min-height: 30px;
 }
 
-.main {
-    margin-top: 50px;
-}
-
 .main-content {
     min-height: 300px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    padding: 40px;
+    background: white;
 }
 
 .main-text {
@@ -215,7 +232,7 @@ header .menu-utility {
 }
 
 .boxShadow1 {
-    box-shadow: 0 6px 4px -4px rgba(0, 0, 0, .2);
+    box-shadow: 0 2px 3px rgba(42,44,53,.25);
 }
 
 .rowing-left {
@@ -283,13 +300,33 @@ header .menu-utility {
 }
 
 footer {
-    background-color: #d0dae0;
+    background-color: #292B31 !important;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    border-top: solid 3px rgba(255, 255, 255, .3);
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .2) !important;
+    box-shadow: inset 0 10px 15px rgba(0, 0, 0, .2);
+}
+
+footer hr {
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-bottom: solid 1px rgba(255, 255, 255 , .1);
+    margin: 10px 0;
+}
+
+footer .container {
+    max-width: 950px;
+}
+
+footer h3 {
+    margin-bottom: 5px;
+    color: #737981;
+    text-transform: uppercase;
 }
 
 footer ul {
     padding-inline-start: inherit;
+    margin-top: 10px;
 }
 
 .footer-block {
@@ -302,6 +339,32 @@ footer ul {
 
 .footer-info a {
     line-height: 20px;
+    color: #e9ebee;
+}
+
+#social-media a {
+    margin-right: 5px;
+}
+
+.payment-systems img {
+    opacity: 0.8;
+    filter: grayscale(40%);
+}
+
+.payment-systems #visa-footer {
+    margin-top: 15px;
+}
+
+.payment-systems #mastercard-footer {
+    margin-top: 10px;
+}
+
+#copyright {
+    color: #737981;
+}
+
+#copyright p {
+    margin: 4px 0;
 }
 
 .error-page-block {
@@ -339,6 +402,10 @@ footer ul {
 #searching-form-title {
     font-size: 16px;
     font-weight: 600;
+}
+
+.logo {
+    margin-left: 40px;
 }
 
 #user-logo {
@@ -402,11 +469,6 @@ footer ul {
 
 .feature-info {
     height: 90px;
-}
-
-#footer-add {
-    height: 30px;
-    margin-top: 10px;
 }
 
 #user-menu-content {
@@ -480,13 +542,13 @@ tr:hover {
 
 .bankcard-delete button {
     height: 100%;
-    border-radius: 3px 1px 1px 3px;
-    background-color: #b8cee2;
-    border-width: 0;
+    border-radius: 3px 1px 1px 3px!important;
+    background-color: #b8cee2!important;
+    border-width: 0!important;
 }
 
 .bankcard-delete button:hover {
-    background-color: rgba(237, 31, 36, 0.7);
+    background-color: rgba(237, 31, 36, 0.7)!important;
 }
 
 .car {
@@ -503,8 +565,8 @@ tr:hover {
     padding-bottom: 10px;
 }
 
-.car:hover .car-title {
-    color: #0100cc;
+.car-desc:hover .car-title {
+    color: #000098ed;
     text-decoration: underline;
 }
 
@@ -520,7 +582,7 @@ tr:hover {
 .car-desc {
     width: 400px;
     margin: 20px 10px 0 40px;
-    color: rgb(54, 73, 90);
+    color: #36495a;
 }
 
 .car-desc p {
@@ -544,7 +606,6 @@ tr:hover {
 .expired-order {
     background-color: lightcoral;
     border: none;
-    font-size: 16px;
 }
 
 .small-car-img {
@@ -564,13 +625,31 @@ tr:hover {
     text-align: center;
 }
 
+#car-information .discount {
+    margin-left: 10px;
+    font-weight: 200;
+    color: #5d5d5d;
+}
+
+#car-information #total-price {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 200;
+    color: #676767;
+}
+
+#car-information #total-price p {
+    margin: 15px 0 10px 0;
+}
+
 #car-images {
     width: 500px;
     margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 #car-details {
-    margin: 40px 0 40px 0;
+    margin: 30px 0 30px 0;
 }
 
 #car-price {
@@ -592,9 +671,9 @@ tr:hover {
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
-                -2px -2px 5px 0 rgba(0,0,0,.1),
-                2px 2px 5px 0 rgba(0,0,0,.1),
-                -2px 2px 5px 0 rgba(0,0,0,.1);
+    -2px -2px 5px 0 rgba(0,0,0,.1),
+    2px 2px 5px 0 rgba(0,0,0,.1),
+    -2px 2px 5px 0 rgba(0,0,0,.1);
     font-size: 20px;
     border-left: 10px solid;
 }
@@ -606,44 +685,13 @@ tr:hover {
 .car-features li:nth-child(5){border-color: #f05d22;}
 .car-features li:nth-child(6){border-color: #8bc63e;}
 
-#order-form {
-    border-radius: 5px;
-    box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
-                -2px -2px 5px 0 rgba(0,0,0,.1),
-                2px 2px 5px 0 rgba(0,0,0,.1),
-                -2px 2px 5px 0 rgba(0,0,0,.1);
-    border-left: 10px solid;
-    border-color: #8a2be254;
-    padding: 20px;
-}
-
-#order-form p {
-    margin: 0;
-}
-
-#order-form input {
-    height: 25px;
-    padding: 5px;
-    width: 170px;
-}
-
-#order-form form {
-    padding: 0 10px;
-}
-
-#order-form button {
-    width: 100%;
-    height: 40px;
-    margin-top: 10px;
-    font-size: 20px;
-}
-
 .quick-order {
     display: flex;
     padding-left: 30px;
-    margin-top: 20px;
     margin: 20px 0;
     border-left: 1px solid #dddddd;
+    min-height: 150px;
+    width: 200px;
 }
 
 .quick-order form {
@@ -710,8 +758,8 @@ tr:hover {
 .edit-button {
     color: #313131;
     background-color: aliceblue;
-    border: 1px solid #cee3f5;
-    border-radius: 2px;
+    border: 1px solid #cee3f5!important;
+    border-radius: 2px!important;
     font-weight: 500;
     cursor: pointer;
     text-transform: none;
@@ -721,9 +769,9 @@ tr:hover {
 }
 
 .edit-button:hover {
-    color: #313131;
-    background-color: #e7f3fd;
-    border: 1px solid #cee3f5;
+    color: #313131!important;
+    background-color: #e7f3fd!important;
+    border: 1px solid #cee3f5!important;
 }
 
 .confirm-button {
@@ -731,9 +779,9 @@ tr:hover {
 }
 
 #car-information #available-date  {
-    margin: 0 0 6px 10px;
-    font-size: 13px;
+    margin-top: 5px;
     color: #5d5d5d;
+    font-weight: 200;
 }
 
 #registration-date {
@@ -834,7 +882,7 @@ tr:hover {
     background-color: #f2f2f2;
     color: #000;
     font-weight: 300;
-    border-color: #f2f2f2;
+    border-color: #f2f2f2!important;
 }
 
 .cancel-button:hover {
@@ -856,10 +904,6 @@ tr:hover {
     text-decoration: none;
 }
 
-.payment-systems {
-    margin: 20px 20px 0 0;
-}
-
 .data-updated {
     color: green;
     margin: 5px 0 0 0;
@@ -876,7 +920,7 @@ tr:hover {
 }
 
 .user-menu-tab a:hover {
-    box-shadow:0px -5px 0 #5b8db9 inset;
+    box-shadow:0 -5px 0 #5b8db9 inset;
     background-color: #f0f8ffa1;
 }
 
@@ -893,16 +937,21 @@ tr:hover {
 
 .admin-tab a:hover {
     background-color: #ee6371;
-    box-shadow: 0px -5px 0 #096363 inset!important;
+    box-shadow: 0 -5px 0 #096363 inset!important;
 }
 
 .admin-tab.selected-tab a {
-    box-shadow: 0px -4px 0 #5a514f inset!important;
+    box-shadow: 0 -4px 0 #5a514f inset!important;
 }
 
 .header-menu.selected-tab a {
     box-shadow: -3px 1px 5px -1px #00000014,
-    0px -4px 0 #9de044 inset!important;
+    0 -4px 0 #9de044 inset!important;
+    background: #d0dae080!important;
+}
+
+.selected-tab a {
+    box-shadow: 0 -4px 0 #9de044 inset!important;
 }
 
 #main-menu {
@@ -930,13 +979,9 @@ tr:hover {
 
 .header-menu a:hover {
     box-shadow: -3px 1px 5px -1px rgba(0,0,0,.1),
-    0px -5px 0 #5b8db9 inset;
+    0 -5px 0 #5b8db9 inset;
     text-decoration: none;
-    background: rgb(241 241 241);
-}
-
-footer ul {
-    list-style-type: circle;
+    background: #d0dae080;
 }
 
 .pages-back {
@@ -993,7 +1038,7 @@ footer ul {
     height: 25px;
     width: 25px;
     background-color: #eee;
-    box-shadow: #00000038 0px 2px 4px 0px inset;
+    box-shadow: #00000038 0 2px 4px 0 inset;
 }
 
 .checkbox1:hover input ~ .checkmark {
@@ -1092,10 +1137,6 @@ footer ul {
     font-size: 30px;
 }
 
-.car-price .discount {
-    background-color: #1ccfc933;
-}
-
 .quick-order .car-price .old-price {
     font-size: 16px;
 }
@@ -1108,21 +1149,16 @@ footer ul {
     font-size: 14px;
 }
 
-.quick-order .car-price .discount {
-    font-size: 12px;
-}
-
 .quick-order .car-price {
     margin-bottom: -10px;
 }
 
 #car-information .car-price {
-    margin: 20px 0;
     border-radius: 5px;
     box-shadow: 2px -2px 5px 0 rgba(0,0,0,.1),
-                -2px -2px 5px 0 rgba(0,0,0,.1),
-                2px 2px 5px 0 rgba(0,0,0,.1),
-                -2px 2px 5px 0 rgba(0,0,0,.1);
+    -2px -2px 5px 0 rgba(0,0,0,.1),
+    2px 2px 5px 0 rgba(0,0,0,.1),
+    -2px 2px 5px 0 rgba(0,0,0,.1);
     border-left: 10px solid;
     border-color: #9de044;
 }
@@ -1132,7 +1168,7 @@ footer ul {
 }
 
 #car-content {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-bottom: 1px solid rgb(221, 221, 221);
 }
 
@@ -1146,7 +1182,7 @@ footer ul {
     border: 1px solid #d0dae06b;
     border-radius: 5px;
     box-shadow: 1px 2px 5px 0 #5d5d5d1a,
-                0px 6px 0 #5b8db9 inset;
+    0 6px 0 #5b8db9 inset;
     margin: 0 30px 30px 0;
     padding: 0 15px 10px 0;
     background-color: #cccccc24;
@@ -1154,7 +1190,7 @@ footer ul {
 
 .recommended-car:hover {
     box-shadow: 1px 2px 9px 0 #316f7961,
-                0px 6px 0 #8bc63e inset;
+    0 6px 0 #8bc63e inset;
     background-color: #cccccc52;
 }
 
@@ -1178,4 +1214,43 @@ footer ul {
 .recommended-car:hover h2 {
     color: #0100cc;
     text-decoration: underline;
+}
+
+.rent-car {
+    border-top: 1px solid rgb(221, 221, 221);
+    padding: 20px 50px 10px;
+}
+
+.rent-car #phone {
+    margin-top: 8px;
+}
+
+.rent-car div {
+    width: 49%;
+}
+
+.rent-car p {
+    margin: 0;
+}
+
+.rent-car input {
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+}
+
+.rent-car button {
+    width: 100%;
+    height: 40px;
+    font-size: 28px;
+    margin-top: 8px;
+}
+
+.rent-car .data-error {
+    margin-top: 10px;
+}
+
+.rent-car .data-updated {
+    margin-top: 10px;
+    font-size: 16px;
 }
