--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -18,6 +18,12 @@ body {
     color: #5d5d5d;
 }
 
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 a {
     transition: all .3s;
     color: #00529c;
@@ -631,14 +637,14 @@ tr:hover {
     color: #5d5d5d;
 }
 
-#car-information #total-price {
+#total-price {
     text-align: center;
     font-size: 20px;
     font-weight: 200;
     color: #676767;
 }
 
-#car-information #total-price p {
+#total-price p {
     margin: 15px 0 10px 0;
 }
 
@@ -694,7 +700,7 @@ tr:hover {
     width: 200px;
 }
 
-.quick-order form {
+.quick-order .quick-order-content {
     margin: auto;
     text-align: center;
 }
@@ -778,7 +784,7 @@ tr:hover {
     font-weight: 600!important;
 }
 
-#car-information #available-date  {
+#available-date  {
     margin-top: 5px;
     color: #5d5d5d;
     font-weight: 200;
@@ -1132,6 +1138,7 @@ tr:hover {
     padding: 5px 0;
 }
 
+#car-order .price,
 .price-content .price {
     font-weight: 700;
     font-size: 30px;
@@ -1151,6 +1158,10 @@ tr:hover {
 
 .quick-order .car-price {
     margin-bottom: -10px;
+}
+
+.quick-order #available-date {
+    float: left;
 }
 
 #car-information .car-price {
@@ -1216,9 +1227,9 @@ tr:hover {
     text-decoration: underline;
 }
 
-.rent-car {
+#car-content .rent-car {
     border-top: 1px solid rgb(221, 221, 221);
-    padding: 20px 50px 10px;
+    padding: 30px 0 10px;
 }
 
 .rent-car #phone {
@@ -1243,7 +1254,6 @@ tr:hover {
     width: 100%;
     height: 40px;
     font-size: 28px;
-    margin-top: 8px;
 }
 
 .rent-car .data-error {
@@ -1253,4 +1263,209 @@ tr:hover {
 .rent-car .data-updated {
     margin-top: 10px;
     font-size: 16px;
+}
+
+#quick-order-modal.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 150px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#quick-order-modal .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    border-radius: 3px;
+    margin: auto;
+    width: 420px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),
+    0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+#quick-order-modal .rent-car {
+    padding: 30px;
+    border-top: none;
+}
+
+#quick-order-modal .modal-header {
+    border-radius: 3px 3px 0 0;
+    padding: 5px 5px 5px 40px;
+    background-color: #3498db;
+    color: white;
+}
+
+#quick-order-modal .modal-footer {
+    padding: 5px 20px;
+    background-color: #3498db;
+    color: white;
+}
+
+#quick-order-modal .close {
+    color: white;
+    float: right;
+    font-size: 35px;
+    font-weight: bold;
+    padding: 17px;
+}
+
+#quick-order-modal .close:hover,
+#quick-order-modal .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#car-order .rent-car {
+    width: 390px;
+    padding: 20px 0 20px 20px;
+}
+
+#car-order .car-title {
+    font-size: 30px;
+}
+
+#car-order .car-price {
+    width: 100%;
+}
+
+#car-order #customer-passport {
+    padding: 20px 0 20px 20px;
+}
+
+#car-order .car-price {
+    margin: 20px 0;
+    text-align: center;
+}
+
+#car-order .customer-data {
+    width: 60%;
+}
+
+#car-order #total-price p {
+    margin: 0 0 20px 0;
+    text-align: center;
+}
+
+#car-order #total-price {
+    width: 100%;
+}
+
+#car-order #customer-passport .user-data-fields {
+    width: 350px;
+}
+
+#car-order .car-title {
+    text-align: center;
+}
+
+#car-order .rent-car input {
+    margin-bottom: 8px;
+}
+
+#car-order .bankcard {
+    padding: 0 0 0 15px;
+}
+
+#car-order .bankcard img {
+    width: 45px;
+}
+
+#car-order .select-card {
+    display: flex;
+    margin-right: 18px;
+}
+
+#car-order .select-card input {
+    margin: auto;
+}
+
+#car-order #adding-bankcard {
+    display: none;
+    margin: 30px 10px 0 0;
+}
+
+#car-order #adding-bankcard #front-side-bankcard {
+    margin-left: 20px;
+}
+
+#car-order #use-linked-cards,
+#car-order #use-other-card {
+    cursor: pointer;
+    text-decoration: underline;
+    margin-left: 20px;
+}
+
+#car-order #use-linked-cards {
+    display: none;
+}
+
+#car-order .add-bankcard {
+    display: none;
+    margin: 20px 0 -20px 20px;
+}
+
+#car-order .user-payment {
+    padding: 15px 0 10px 20px;
+}
+
+#car-order .user-payment .bankcards {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+input[type="checkbox"] {
+    margin: 0 5px 0 0;
+}
+
+.heading1 {
+    font-size: 25px;
+    font-weight: 400;
+    margin: 0 20px 0 0;
+}
+
+#passport-in-office ~ label,
+#change-passport ~ label,
+#payment-in-office ~ label,
+#add-bankcard ~ label {
+    color: #828282;
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.blocked-card {
+    background: #f1f1f1;
+    border: 1px solid #e0e0e0;
+}
+
+.blocked-card img {
+    filter: grayscale(100%);
+}
+
+.blocked-card .bankcard-number p {
+    color: #6f6f6f;
+}
+
+.passport-in-office {
+    display: none;
 }
