--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -24,6 +24,24 @@ body {
     clear: both;
 }
 
+.heading1 {
+    font-size: 25px;
+    font-weight: 400;
+    margin: 0 20px 0 0;
+}
+
+.heading2 {
+    font-size: 22px;
+    font-weight: 600;
+    margin: 10px 5px 10px 0;
+}
+
+.heading3 {
+    font-size: 22px;
+    font-weight: 200;
+    margin: 10px 5px 10px 0;
+}
+
 a {
     transition: all .3s;
     color: #00529c;
@@ -884,15 +902,18 @@ tr:hover {
     margin-right: 10px;
 }
 
+.skip-button,
 .cancel-button {
     background-color: #f2f2f2;
-    color: #000;
+    color: #6b6b6b;
     font-weight: 300;
     border-color: #f2f2f2!important;
 }
 
+.skip-button:hover,
 .cancel-button:hover {
     background-color: #e6e6e6;
+    color: #2f2f2f;
 }
 
 #add-bankcard-button p {
@@ -1337,7 +1358,7 @@ tr:hover {
 }
 
 #car-order .rent-car {
-    width: 390px;
+    width: 450px;
     padding: 20px 0 20px 20px;
 }
 
@@ -1350,7 +1371,7 @@ tr:hover {
 }
 
 #car-order #customer-passport {
-    padding: 20px 0 20px 20px;
+    padding: 20px 20px 20px 0;
 }
 
 #car-order .car-price {
@@ -1372,7 +1393,7 @@ tr:hover {
 }
 
 #car-order #customer-passport .user-data-fields {
-    width: 350px;
+    width: 310px;
 }
 
 #car-order .car-title {
@@ -1383,70 +1404,72 @@ tr:hover {
     margin-bottom: 8px;
 }
 
-#car-order .bankcard {
+#order-payment {
+    padding: 0 40px;
+}
+
+#order-payment .order-payment-title {
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#order-payment .bankcards {
+    padding: 20px;
+}
+
+#order-payment .bankcard {
     padding: 0 0 0 15px;
 }
 
-#car-order .bankcard img {
-    width: 45px;
-}
-
-#car-order .select-card {
+#order-payment .select-card {
     display: flex;
     margin-right: 18px;
 }
 
-#car-order .select-card input {
+#order-payment .select-card input {
     margin: auto;
 }
 
-#car-order #adding-bankcard {
+#order-payment #adding-bankcard {
     display: none;
-    margin: 30px 10px 0 0;
+    margin-top: 10px;
 }
 
-#car-order #adding-bankcard #front-side-bankcard {
+#order-payment .payment-buttons {
     margin-left: 20px;
 }
 
-#car-order #use-linked-cards,
-#car-order #use-other-card {
+#order-payment .payment-buttons button {
+    padding: 10px 40px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+#order-payment #adding-bankcard #front-side-bankcard {
+    margin-left: 0;
+}
+
+#order-payment #use-linked-cards,
+#order-payment #use-another-bankcard {
     cursor: pointer;
     text-decoration: underline;
-    margin-left: 20px;
 }
 
-#car-order #use-linked-cards {
+#order-payment #use-linked-cards {
     display: none;
 }
 
-#car-order .add-bankcard {
+#order-payment .add-bankcard {
     display: none;
-    margin: 20px 0 -20px 20px;
-}
-
-#car-order .user-payment {
-    padding: 15px 0 10px 20px;
-}
-
-#car-order .user-payment .bankcards {
-    margin-top: 5px;
-    margin-bottom: 10px;
 }
 
 input[type="checkbox"] {
     margin: 0 5px 0 0;
 }
 
-.heading1 {
-    font-size: 25px;
-    font-weight: 400;
-    margin: 0 20px 0 0;
-}
-
 #passport-in-office ~ label,
 #change-passport ~ label,
-#payment-in-office ~ label,
+#order-payment label,
 #add-bankcard ~ label {
     color: #828282;
     font-weight: 300;
