--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -18,6 +18,11 @@ body {
     background: #e8ebed;
 }
 
+hr {
+    border: 0;
+    border-top: 1px solid #d6d5d5
+}
+
 ::placeholder {
     color: #5d5d5d;
 }
@@ -647,6 +652,11 @@ tr:hover {
 
 .new-order {
     background-color: #9de0448c;
+    border-color: #f1f1f1;
+}
+
+.processing-order {
+    background-color: #c0e0fb;
     border-color: #f1f1f1;
 }
 
@@ -1577,4 +1587,33 @@ input[type="checkbox"] {
 
 #postpaid-btn {
     font-weight: 400!important;
+}
+
+.news {
+    margin-left: 5px;
+}
+
+.page-title {
+    margin-bottom: 20px;
+    font-size: 28px;
+    font-weight: 600;
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 20px;
+    overflow: hidden;
+    padding-top: 2px;
+}
+
+.page-title:after {
+    margin-left: 15px;
+    content: "";
+    top: 50%;
+    position: absolute;
+    width: 100%;
+    border-bottom: solid 2px rgba(0, 0, 0, .12);
+}
+
+h1 {
+    margin-top: 0;
 }
