--- a/src/main/webapp/css/core.css
+++ b/src/main/webapp/css/core.css
@@ -246,6 +246,7 @@ header .menu-utility {
     min-height: 300px;
     padding: 40px;
     background: white;
+    box-shadow: 0px 0px 16px -6px rgba(0,0,0,0.75);
 }
 
 .main-text {
